--- a/static/downloads/dist.htm
+++ b/static/downloads/dist.htm
@@ -49,7 +49,7 @@ window.onload = function() {
 </script>
 </head>
 <body>
-<p id="distance-feedback">
+<p id="distance-feedback" style="font-size: 48px;">
 [ ]
 </p>
 <p id="error-feedback">
