--- a/static/downloads/dist.htm
+++ b/static/downloads/dist.htm
@@ -1,5 +1,64 @@
 <html>
 <head>
+<style>
+*{
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+html {
+  height: 100%;
+  }
+body {
+  min-height: 100%;
+  }
+.wrapper {
+  display: grid;
+  border-style: solid;
+  border-color: red;
+  grid-template-columns: 100%;
+  grid-template-rows: 90% 10%;
+  grid-gap: 2px;
+  width: 100vw;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+}
+#distance-feedback {
+  //border-style: solid;
+  //border-color: blue;
+  grid-column: 1;
+  grid-row: 1;
+  font-size: 20vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#error-feedback {
+  //border-style: solid;
+  //border-color: blue;
+  grid-column: 1;
+  grid-row: 2;
+}
+
+/*
+html, body { margin: 0px; height: 100%; }
+div {
+    height: 100%;
+    width: 100%;
+    border: 2px dashed #4b2869;
+}
+#distance-feedback {
+    width:100%;
+    height:100%;
+    min-height: 10em;
+    display: table-cell;
+    vertical-align: middle;
+    font-size: 150px;
+    text-align:center;
+}
+*/
+</style>
 <script>
 target_lat='37.4081636024583';
 target_long='-122.11692754350655';
@@ -33,26 +92,28 @@ function distance(lat1, lon1, lat2, lon2, unit) {
 }
 function update_distance(position) {
   dist=distance(target_lat, target_long, position.coords.latitude, position.coords.longitude, 'f');
-  console.log(target_lat, target_long, position.coords.latitude, position.coords.longitude, 'f', dist.toFixed(0))
-  document.getElementById("distance-feedback").innerHTML = '[' + dist.toFixed(0) + ']';
+  console.log(target_lat, target_long, position.coords.latitude, position.coords.longitude, 'f', dist.toLocaleString(undefined, {maximumFractionDigits: 0}))
+  document.getElementById("distance-feedback").innerHTML = ' ' + dist.toLocaleString(undefined, {maximumFractionDigits: 0}) + ' ';
 }
 function update_error(error) {
-  document.getElementById("error-feedback").innerHTML = 'location error';
+  document.getElementById("error-feedback").innerHTML = '(location error)';
 }
 window.onload = function() {
   // do something when the page loads
-  document.getElementById("distance-feedback").style.width = "100%";
-  document.getElementById("distance-feedback").style.height = "100%";
+  //document.getElementById("distance-feedback").style.width = "100%";
+  //document.getElementById("distance-feedback").style.height = "100%";
   navigator.geolocation.getCurrentPosition(update_distance, update_error, options);
   const id = navigator.geolocation.watchPosition(update_distance, update_error, options);
 };
 </script>
 </head>
 <body>
-<p id="distance-feedback" style="font-size: 150px;">
-[ ]
-</p>
-<p id="error-feedback">
-</p>
+<div class="wrapper">
+  <div id="distance-feedback">
+  ( )
+  </div>
+  <div id="error-feedback">
+  </div>
+</div>
 </body>
 </html>
