--- a/static/downloads/algorithms.htm
+++ b/static/downloads/algorithms.htm
@@ -22,6 +22,7 @@ Beautiful algorithms that will make you smarter for understanding them:
 - Count-Min Sketch: probabilistic data structure that serves as a frequency table of events in a stream of data
 - Hierarchical Timing Wheels: Efficient Implementation of a Timer Facility
 - Operational Transform (OT): collaboration functionalities in advanced collaborative software (used by Google Docs for simultaneous editing)
+- Conflict-free Replicated Data Types (CRDTs): newer maybe better algorithm than OT for collaborative software
 - Distributed Hash Tables (DHT) -  distributed system that provides a key-value lookup service similar to a hash table. Used in P2P file sync systems like BitTorrent
 - Structural Sharing of Persistent Data Structures - highly efficient immutable data structures (used by Clojure and ZFS)
 </pre>
