--- a/static/downloads/mihq.htm
+++ b/static/downloads/mihq.htm
@@ -3,10 +3,11 @@
 <head>
     <title>Morse Code Translator</title>
     <link rel="stylesheet" type="text/css" href="morse.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 </head>
 <body>
-    <button id="redButton">RED</button>
-    <button id="greenButton">GREEN</button>
+    <button id="redButton">   </button>
+    <button id="greenButton">   </button>
     <div id="inputDisplay"></div>
     <div id="resultDisplay"></div>
 
