--- a/static/downloads/mihq.htm
+++ b/static/downloads/mihq.htm
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 </head>
 <body>
+	<img id='victory-image'>
     <button id="redButton">   </button>
     <button id="greenButton">   </button>
     <div id="inputDisplay"></div>
@@ -14,5 +15,6 @@
     <script src="morse.js"></script>
     <audio id="morse-dot" src="morse-dot.mp3" preload="auto"></audio>
     <audio id="morse-dash" src="morse-dash.mp3" preload="auto"></audio>
+	<audio id="victory-speech" src="victory-speech.mp3" preload="auto"></audio>
 </body>
 </html>
