--- a/static/downloads/dist.htm
+++ b/static/downloads/dist.htm
@@ -109,7 +109,7 @@ function update_distance(position) {
 	}
 }
 function update_error(error) {
-  document.getElementById("error-feedback").innerHTML = '(location error)';
+  document.getElementById("error-feedback").innerHTML = '(Error. You must enable GPS location for this browser)';
 }
 window.onload = function() {
   // do something when the page loads
