gpshunt blog success image

--- a/static/downloads/dist.htm
+++ b/static/downloads/dist.htm
@@ -74,23 +74,18 @@ div {
 </style>
 <script>
 
-// Palo Alto:
-// target_lat='37.4081636024583';
-// target_long='-122.11692754350655';
-// success_image = 'https://www.petertheobald.com/downloads/crypto-sign.png';
-
 // Example: San Francisco Yoda statue outside Lucasfilm
 target_lat='37.7987857';
 target_long='-122.450617';
-success_image='https://en.wikipedia.org/wiki/Success_Kid#/media/File:SuccessKid.jpg';
+success_image='https://upload.wikimedia.org/wikipedia/en/f/ff/SuccessKid.jpg';
 target_size = 10; // distance in feet to target for success
-
 
 // if demo_mode is true, ignore the configured target location
 // and pick a target approx. 700 feet East of the player's
 // starting position.
 // (assuming lat. 37.8 N, further or closer at different latitudes)
 demo_mode = true;
+success_image='https://www.petertheobald.com/Downloads/puzzle2023-gpssuccess.png';
 
 const options = {
   enableHighAccuracy: true,
