added 1x1white default image

--- a/static/downloads/dist.htm
+++ b/static/downloads/dist.htm
@@ -150,7 +150,7 @@ window.onload = function() {
 </script>
 </head>
 <body>
-<img id='success-image'>
+<img id='success-image' src="http://www.petertheobald.com/downloads/1x1white.png">
 <div class="wrapper">
   <div id="distance-feedback">
   ( )
