--- a/static/downloads/dist.htm
+++ b/static/downloads/dist.htm
@@ -12,18 +12,16 @@
   padding: 0;
   margin: 0;
 }
-html {
+html, body {
   height: 100%;
-  }
-body {
-  min-height: 100%;
+  overflow: hidden;
   }
 .wrapper {
   display: grid;
   border-style: solid;
   border-color: red;
   grid-template-columns: 100%;
-  grid-template-rows: 90% 10%;
+  grid-template-rows: auto min-content;
   grid-gap: 2px;
   width: 100vw;
   height: 100vh;
