--- a/static/downloads/dist.htm
+++ b/static/downloads/dist.htm
@@ -157,6 +157,6 @@ window.onload = function() {
   <div id="error-feedback">
   </div>
 </div>
-<audio id="victory-speech" src="ta-da.mp3" preload="auto"></audio>
+<audio id="success-audio" src="ta-da.mp3" preload="auto"></audio>
 </body>
 </html>
