--- a/static/downloads/dist.htm
+++ b/static/downloads/dist.htm
@@ -159,6 +159,6 @@ window.onload = function() {
   <div id="error-feedback">
   </div>
 </div>
-<audio id="success-audio" src="http://www.petertheobald.com/downloads/ta-da.mp3" preload="auto"></audio>
+<audio id="success-audio" src="https://www.petertheobald.com/downloads/ta-da.mp3" preload="auto"></audio>
 </body>
 </html>
