copy files from docs/ to content/

--- a/content/play/cartoon-compare/index.html
+++ b/content/play/cartoon-compare/index.html
@@ -49,10 +49,17 @@
   <div class="row">
     <img src="zombie-plus-skeleton-plus-ghost1.png" alt="Image 1a">
     <img src="zombie-plus-skeleton-plus-ghost2.png" alt="Image 1a">
+    <img src="zombie-plus-skeleton-plus-ghost3.png" alt="Image 1a">
   </div>
 
   <div class="row">
     <img src="wolverine1.png" alt="Image 1a">
+    <img src="wolverine2.png" alt="Image 1a">
+  </div>
+
+  <div class="row">
+    <img src="cats are jerks1.png" alt="Image 1a">
+    <img src="cats are jerks2.png" alt="Image 1a">
   </div>
 
   <div class="row">
@@ -60,6 +67,10 @@
     <img src="GPTerminator2.png" alt="Image 1a">
   </div>
 
+  <div class="row">
+    <img src="matrix-climbing1.png" alt="Image 1a">
+    <img src="matrix-climbing2.png" alt="Image 1a">
+  </div>
 
 </body>
 </html>
