cartoon compare update

--- a/content/play/cartoon-compare/index.html
+++ b/content/play/cartoon-compare/index.html
@@ -29,14 +29,27 @@
   <h1>Cartoon style comparison</h1>
 
   <div class="row">
-    <img src="germs1.png" alt="Cartoon image">
-    <img src="germs2.png" alt="Cartoon image">
+    <img src="balloon.png" alt="Cartoon image">
+    <img src="balloon-penink.png" alt="Cartoon image">
+  </div>
+  
+  <div class="row">
+    <img src="germs.png" alt="Cartoon image">
+    <img src="germs-ai.png" alt="Cartoon image">
   </div>
 
   <div class="row">
-    <img src="legolas1.png" alt="Cartoon image">
-    <img src="legolas2.png" alt="Cartoon image">
-    <img src="legolas3.png" alt="Cartoon image">
+    <img src="legolas-goodnews.png" alt="Cartoon image">
+    <img src="legolas - penink.png" alt="Cartoon image">
+  </div>
+
+  <div class="row">
+    <img src="naughty or nice ai.png" alt="Cartoon image">
+    <img src="santa - penink.png" alt="Cartoon image">
+  </div>
+
+  <div class="row">
+    <img src="skeeter-penink.png" alt="Cartoon image">
   </div>
 
   <div class="row">
@@ -53,18 +66,22 @@
   </div>
 
   <div class="row">
-    <img src="wolverine1.png" alt="Cartoon image">
     <img src="wolverine2.png" alt="Cartoon image">
+    <img src="wolverine4.png" alt="Cartoon image">
   </div>
 
   <div class="row">
-    <img src="cats are jerks1.png" alt="Cartoon image">
-    <img src="cats are jerks2.png" alt="Cartoon image">
+    <img src="cats.png" alt="Cartoon image">
+    <img src="cats - penink.png" alt="Cartoon image">
   </div>
 
   <div class="row">
-    <img src="GPTerminator1.png" alt="Cartoon image" title="Context: In 2024 ChatGPT AI would incorrectly state the word 'strawberry' contains only 2 'r' characters">
-    <img src="GPTerminator2.png" alt="Cartoon image" title="Context: In 2024 ChatGPT AI would incorrectly state the word 'strawberry' contains only 2 'r' characters">
+    <img src="Chat-GPTerminator.png" alt="Cartoon image" title="Context: In 2024 ChatGPT AI would incorrectly state the word 'strawberry' contains only 2 'r' characters">
+    <img src="Chat-GPTerminator - penink.png" alt="Cartoon image" title="Context: In 2024 ChatGPT AI would incorrectly state the word 'strawberry' contains only 2 'r' characters">
+  </div>
+
+  <div class="row">
+    <img src="zombie-plus-skeleton-plus-ghost3.png" alt="Cartoon image">
   </div>
 
   <div class="row">
