--- a/content/play/cartoon-compare/index.html
+++ b/content/play/cartoon-compare/index.html
@@ -72,7 +72,7 @@
 
   <div class="row">
     <img src="Chat-GPTerminator.png" alt="Cartoon image" title="Context: In 2024 ChatGPT AI would incorrectly state the word 'strawberry' contains only 2 'r' characters">
-    <img src="Chat-GPTerminator - penink.png" alt="Cartoon image" title="Context: In 2024 ChatGPT AI would incorrectly state the word 'strawberry' contains only 2 'r' characters">
+    <img src="Chat-GPTerminator-penink.png" alt="Cartoon image" title="Context: In 2024 ChatGPT AI would incorrectly state the word 'strawberry' contains only 2 'r' characters">
   </div>
 
 
